syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "common/source.proto";
import "common/external_system.proto";

option go_package = "api/grpc/v1/user;user_grpc_service";

message UpsertUserGrpcRequest {
  string id = 1;
  string tenant = 2;
  string firstName = 3;
  string lastName = 4;
  string name = 5;
  string appSource = 6 [deprecated = true];
  string source = 7 [deprecated = true];
  string sourceOfTruth = 8 [deprecated = true];
  google.protobuf.Timestamp createdAt = 9;
  google.protobuf.Timestamp updatedAt = 10;
  bool internal = 11;
  string profilePhotoUrl = 12;
  string timezone = 13;
  SourceFields sourceFields = 14;
  ExternalSystemFields externalSystemFields = 15;
  string loggedInUserId = 16;
  bool bot = 17;
}

message LinkJobRoleToUserGrpcRequest {
  string tenant = 1;
  string userId = 2;
  string jobRoleId = 3;
  string loggedInUserId = 4;
  string appSource = 5;
}

message LinkPhoneNumberToUserGrpcRequest {
  string tenant = 1;
  string userId = 2;
  string phoneNumberId = 3;
  bool primary = 4;
  string label = 5;
  string loggedInUserId = 6;
  string appSource = 7;
}

message LinkEmailToUserGrpcRequest {
  string tenant = 1;
  string userId = 2;
  string emailId = 3;
  bool primary = 4;
  string loggedInUserId = 6;
  string appSource = 7;
  string email = 8;
}

message UnLinkEmailFromUserGrpcRequest {
  string tenant = 1;
  string userId = 2;
  string loggedInUserId = 3;
  string appSource = 4;
  string email = 5;
}

message AddRoleGrpcRequest {
  string userId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string role = 4;
  string appSource = 5;
}

message RemoveRoleGrpcRequest {
  string userId = 1;
  string tenant = 2;
  string loggedInUserId = 3;
  string role = 4;
  string appSource = 5;
}

message UserIdGrpcResponse {
  string id = 1;
}

// User gRPC service
service userGrpcService {
  rpc UpsertUser(UpsertUserGrpcRequest) returns (UserIdGrpcResponse);
  rpc LinkJobRoleToUser(LinkJobRoleToUserGrpcRequest) returns (UserIdGrpcResponse);
  rpc LinkPhoneNumberToUser(LinkPhoneNumberToUserGrpcRequest) returns (UserIdGrpcResponse);
  rpc LinkEmailToUser(LinkEmailToUserGrpcRequest) returns (UserIdGrpcResponse);
  rpc UnLinkEmailFromUser(UnLinkEmailFromUserGrpcRequest) returns (UserIdGrpcResponse);
  rpc AddRole(AddRoleGrpcRequest) returns (UserIdGrpcResponse);
  rpc RemoveRole(RemoveRoleGrpcRequest) returns (UserIdGrpcResponse);
}
